Fixed README title

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-## Sinch authentication token backend example
+## Sinch auth token backend example
 
 This demonstrates a basic partner backend for generating authentication tokens. 
 In this example the user database is not persistent: Only for demonstrational purpose!
@@ -11,14 +11,14 @@ Tornado >= 4.0.1
 pip (python package index)
 
 
-###Installation & start
+### Installation & start
 pip install tornado (or upgrade)
 ./backend-example.py
 
 Default port is 2048
 
 
-###Usage
+### Usage
 The demo backend expose two resources
 /register - Register user
 /login - Authentication as user
@@ -30,7 +30,7 @@ Example JSON object: {username: 'someUserName', password: 'highlySecurePwd'}
 Note: You can't authenticate as a user before it's registered!
 
 
-###Example in Javascript
+### Example in Javascript
 
 ```javascript
 <script>
